themes/xrnav/static/css/wordpress-compat.css
/* ... */
.wp-about-page .uagb-block-56811aa8::before {
  content: "";
  position: absolute;
  inset: 0;
  background: rgba(20, 24, 28, 0.88);
  opacity: 0.9;
}

.wp-about-page .uagb-block-56811aa8 > .uagb-container-inner-blocks-wrap {
  position: relative;
  z-index: 1;
  width: min(100%, 55%);
  max-width: min(100%, 55%);
  min-height: calc(100vh - 20px);
  margin: 0 auto;
  display: flex;
  align-items: center;
  justify-content: center;
}

.wp-about-page .uagb-block-d77e8a0b {
  width: 100%;
  text-align: center;
}

.wp-about-page .uagb-block-d77e8a0b > p:last-child,
.wp-about-page .uagb-block-4b5c4fc6 > .uagb-container-inner-blocks-wrap > p:last-child {
  margin-bottom: 0;
}

.wp-about-page .uagb-block-4a73817d .uagb-heading-text {
  color: rgb(249, 250, 251);
  font-size: 40px;
  line-height: 56px;
  margin-bottom: 0;
}

.wp-about-page .uagb-block-56811aa8 .has-text-color {
  color: rgb(249, 250, 251) !important;
  text-align: center;
}

.wp-about-page .uagb-block-5f4b1139 {
  padding: 8% 0;
  row-gap: 20%;
  column-gap: 40px;
  display: flex;
  position: relative;
}

.wp-about-page .uagb-block-5f4b1139 > .uagb-container-inner-blocks-wrap {
  width: min(100%, 70%);
  max-width: min(100%, 70%);
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  row-gap: 20%;
  column-gap: 40px;
  position: relative;
}

.wp-about-page .uagb-block-45ddd987 {
  width: 100%;
  max-width: 78%;
  padding-bottom: 100px;
  display: flex;
  position: relative;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  row-gap: 20px;
  column-gap: 20px;
  align-self: flex-start;
}

.wp-about-page .uagb-block-adb037c7 {
  text-align: center;
  width: 100%;
  position: relative;
}

.wp-about-page .uagb-block-adb037c7 .uagb-ifb-content,
.wp-about-page .uagb-block-adb037c7 .uagb-ifb-title-wrap,
.wp-about-page .uagb-block-adb037c7 .uagb-ifb-title {
  width: 100%;
  max-width: none;
}

.wp-about-page .uagb-block-adb037c7 .uagb-ifb-title,
.wp-about-page .uagb-block-e7e5c675 .uagb-ifb-title,
.wp-about-page .uagb-block-a0b8ede5 .uagb-ifb-title,
.wp-about-page .uagb-block-4a6700de .uagb-ifb-title,
.wp-about-page .uagb-block-2208341d .uagb-ifb-title {
  font-size: 40px;
  line-height: 50px;
  font-weight: 700;
}

.wp-about-page .uagb-block-316f7e41 .uagb-ifb-title,
.wp-about-page .uagb-block-8a61e05b .uagb-ifb-title,
.wp-about-page .uagb-block-28226b57 .uagb-ifb-title {
  font-size: 40px;
  line-height: 52px;
  font-weight: 700;
}

.wp-about-page .uagb-block-adb037c7 .uagb-ifb-desc,
.wp-about-page .uagb-block-e7e5c675 .uagb-ifb-desc,
.wp-about-page .uagb-block-a0b8ede5 .uagb-ifb-desc,
.wp-about-page .uagb-block-4a6700de .uagb-ifb-desc,
.wp-about-page .uagb-block-2208341d .uagb-ifb-desc,
.wp-about-page .uagb-block-316f7e41 .uagb-ifb-desc,
.wp-about-page .uagb-block-8a61e05b .uagb-ifb-desc,
.wp-about-page .uagb-block-28226b57 .uagb-ifb-desc {
  font-size: 16px;
  line-height: 25.6px;
  color: rgb(119, 119, 119);
  margin-bottom: 30px;
}

.wp-about-page .uagb-block-316f7e41 .uagb-ifb-desc,
.wp-about-page .uagb-block-8a61e05b .uagb-ifb-desc,
.wp-about-page .uagb-block-28226b57 .uagb-ifb-desc {
  margin: 0 29.2969px 30px 29.2812px;
}

.wp-about-page .uagb-ifb-button-wrapper {
  margin-top: 30px;
}

.wp-about-page .uagb-ifb-button-wrapper .wp-block-button__link {
  min-height: 52px;
  padding: 15px 30px;
  border: 0;
  border-radius: 3px;
  background: rgb(4, 32, 62);
  color: rgb(249, 250, 251);
  font-size: 16px;
  line-height: 22.4px;
}

.wp-about-page .uagb-block-316f7e41 .wp-block-button__link,
.wp-about-page .uagb-block-8a61e05b .wp-block-button__link,
.wp-about-page .uagb-block-28226b57 .wp-block-button__link {
  min-height: 54px;
  padding: 18px 34px;
  line-height: 16px;
}

.wp-about-page .uagb-block-262e34d4 {
  order: -1;
  width: 100%;
  max-width: none;
  min-height: 70vh;
  padding: 0;
  border-radius: 20px;
  box-shadow: 10px 10px 20px -8px rgba(0, 0, 0, 0.44);
  overflow: hidden;
  background: #fff;
  display: flex;
  align-items: center;
  justify-content: center;
}

.wp-about-page .uagb-block-262e34d4 iframe {
  display: block;
  width: 100%;
  height: 540px;
  border: 0;
}

.wp-about-page .uagb-block-4f510e9f {
  padding: 100px 0;
  background: var(--ast-global-color-5);
  row-gap: 0;
  column-gap: 80px;
  display: flex;
  position: relative;
}

.wp-about-page .uagb-block-e3ee6a34,
.wp-about-page .uagb-block-99b62053 {
  padding: 100px 0;
}

.wp-about-page .uagb-block-e3ee6a34 {
  padding-top: 200px;
}

.wp-about-page .uagb-block-99b62053 {
  padding-bottom: 200px;
}

.wp-about-page .uagb-block-4f510e9f > .uagb-container-inner-blocks-wrap,
.wp-about-page .uagb-block-e3ee6a34 > .uagb-container-inner-blocks-wrap,
.wp-about-page .uagb-block-99b62053 > .uagb-container-inner-blocks-wrap,
.wp-about-page .uagb-block-4084160e > .uagb-container-inner-blocks-wrap,
.wp-about-page .uagb-block-55dd86c5 > .uagb-container-inner-blocks-wrap,
.wp-about-page .uagb-block-b49613d3 > .uagb-container-inner-blocks-wrap {
  width: min(100%, 70%);
  max-width: min(100%, 70%);
  margin: 0 auto;
  display: flex;
  align-items: center;
  gap: 80px;
  justify-content: center;
  position: relative;
}

.wp-about-page .uagb-block-fce06ee7,
.wp-about-page .uagb-block-e03c7a26,
.wp-about-page .uagb-block-bb8592fb,
.wp-about-page .uagb-block-1cbef3a3,
.wp-about-page .uagb-block-75636745,
.wp-about-page .uagb-block-25c8dd88 {
  flex: 0 0 40%;
}

.wp-about-page .uagb-block-1cbef3a3,
.wp-about-page .uagb-block-75636745,
.wp-about-page .uagb-block-25c8dd88 {
  flex: 1 1 auto;
}

.wp-about-page .uagb-block-f30302f6,
.wp-about-page .uagb-block-d8445907,
.wp-about-page .uagb-block-7e2623b4,
.wp-about-page .uagb-block-8f705a85,
.wp-about-page .uagb-block-253df222,
.wp-about-page .uagb-block-e7587deb {
  flex: 1 1 auto;
}

.wp-about-page .uagb-block-f30302f6 {
  display: grid;
  grid-template-columns: repeat(2, minmax(0, 1fr));
  gap: 40px;
}
/* ... */

